k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schedulerapi-deployment
  labels:
    app: schedulerapi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: schedulerapi
  template:
    metadata:
      labels:
        app: schedulerapi
    spec:
      containers:
        - name: schedulerapi
          image: ghcr.io/prospjx/scheduler-api:latest
          ports:
            - containerPort: 8000
